<resources>
    <string name="app_name">SMIDIV</string>
    <string name="nombreAPP">SMIDIV</string>
    <string name="usuario_hint">Usuario..</string>
    <string name="contrasena_hint">Contraseña</string>
    <string name="but_ini">INICIA</string>
    <string name="title_activity_selector">Selector</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="men_ini">Inicio</string>
    <string name="men_stat">Estatus</string>
    <string name="men_ale">Alerta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agregar_auto">Agregar Auto</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="alerta">Alerta</string>
    <string name="registrar_usuario">Registrar Usuario</string>
    <string name="reg_baner">Registrar</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="nacimiento">Fecha de nacimiento</string>
    <string name="registrar">Registrar</string>
    <string name="reperir_contrase_a">Reperir Contraseña</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="agregar_alarma">Agregar alarma</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="historial">historial</string>
    <string name="banner_ubicaccion">Banner Ubicaccion</string>
    <string name="agregar_ubicaci_n">Agregar ubicación</string>
    <string name="cambiar_contrase_a">Cambiar Contraseña</string>
    <string name="id">ID</string>
    <string name="fecha">Fecha de nacimiento</string>
    <string name="hora">Hora</string>
    <string name="nombre_automov_l">Nombre Automovíl</string>
    <string name="modelo_automovil">Modelo Automovil</string>
    <string name="placas_automovil">Placas Automovil</string>
    <string name="identificador_smidiv">Identificador SMIDIV</string>
    <string name="tipo_de_alarma">Tipo de alarma</string>
    <string name="horario">Horario</string>
    <string name="title_activity_dibuja_mapa">Map</string>
    <string name="configuraci_n">Configuración</string>
    <string name="actualizar">Actualizar</string>
    <string name="borrar">Borrar</string>
    <string name="actualizar_usuario">Actualizar Usuario</string>
</resources>
